se cambian formatos de la seccion de biblioteca

--- a/pages/biblioteca_videos/fotos f1/fotos_f1.html
+++ b/pages/biblioteca_videos/fotos f1/fotos_f1.html
@@ -288,100 +288,11 @@
     <div class="videos">
         <div class="carousel">
             <div class="card">
-                <video src="" controls="autoplay" width="550"></video>
-                <video src="" controls="autoplay" width="550"></video>
+                <video src="" controls="autoplay" width="100%"></video>
             </div>
         </div>
     </div>
-    <div class="videos">
-        <div class="carousel">
-            <div class="card">
-                <video src="" controls="autoplay" width="550"></video>
-                <video src="" controls="autoplay" width="550"></video>
-            </div>
-        </div>
-    </div>
-    <div class="videos">
-        <div class="carousel">
-            <div class="card">
-                <video src="" controls="autoplay" width="550"></video>
-                <video src="" controls="autoplay" width="550"></video>
-            </div>
-        </div>
-    </div>
-    <div class="videos">
-        <div class="carousel">
-            <div class="card">
-                <video src="" controls="autoplay" width="550"></video>
-                <video src="" controls="autoplay" width="550"></video>
-            </div>
-        </div>
-    </div>
-    <div class="videos">
-        <div class="carousel">
-            <div class="card">
-                <video src="" controls="autoplay" width="550"></video>
-                <video src="" controls="autoplay" width="550"></video>
-            </div>
-        </div>
-    </div>
-    <div class="videos">
-        <div class="carousel">
-            <div class="card">
-                <video src="" controls="autoplay" width="550"></video>
-                <video src="" controls="autoplay" width="550"></video>
-            </div>
-        </div>
-    </div>
-    <div class="videos">
-        <div class="carousel">
-            <div class="card">
-                <video src="" controls="autoplay" width="550"></video>
-                <video src="" controls="autoplay" width="550"></video>
-            </div>
-        </div>
-    </div>
-    <div class="videos">
-        <div class="carousel">
-            <div class="card">
-                <video src="" controls="autoplay" width="550"></video>
-                <video src="" controls="autoplay" width="550"></video>
-            </div>
-        </div>
-    </div>
-    <div class="videos">
-        <div class="carousel">
-            <div class="card">
-                <video src="" controls="autoplay" width="550"></video>
-                <video src="" controls="autoplay" width="550"></video>
-            </div>
-        </div>
-    </div>
-    <div class="videos">
-        <div class="carousel">
-            <div class="card">
-                <video src="" controls="autoplay" width="550"></video>
-                <video src="" controls="autoplay" width="550"></video>
-            </div>
-        </div>
-    </div>
-    <div class="videos">
-        <div class="carousel">
-            <div class="card">
-                <video src="" controls="autoplay" width="550"></video>
-                <video src="" controls="autoplay" width="550"></video>
-            </div>
-        </div>
-    </div>
-    <div class="videos">
-        <div class="carousel">
-            <div class="card">
-                <video src="" controls="autoplay" width="550"></video>
-                <video src="" controls="autoplay" width="550"></video>
-            </div>
-        </div>
-    </div>
-    
+
     <!--<div class="btnmas">
         <button class="buttonmas">
             <span class="button-border">
