--- a/pages/deportes/f1/home_f1.html
+++ b/pages/deportes/f1/home_f1.html
@@ -34,7 +34,7 @@
             <span>DEPORTES</span>
             <span></span>
         </button>
-        <button class="animated-button" onclick="window.location.href='../../biblioteca_videos/home_videos.html'">
+        <button class="animated-button" onclick="window.location.href='../../biblioteca_videos/fotos f1/fotos_f1.html'">
             <span>BIBLIOTECA</span>
             <span></span>
         </button>
