--- a/pages/deportes/home_deportes.html
+++ b/pages/deportes/home_deportes.html
@@ -47,7 +47,12 @@
             <span></span>
         </button>
     </div>
-    
+    <!--seccion donde se muestra toda la informacion de los deportes-->
+    <div class="titulos">
+        <button class="beautiful-button">
+            FUTBOL
+        </button>
+    </div>
     <div class="fondo">
         <div class="deportes">
             <div class="apostar">
@@ -64,6 +69,11 @@
         <div class="info">
             <p>kjhgkjhgjhgg</p>
         </div>
+    </div>
+    <div class="titulos">
+        <button class="beautiful-button">
+            HANDBALL
+        </button>
     </div>
     <div class="fondo">
         <div class="deportes">
@@ -82,7 +92,162 @@
             <p>kjhgkjhgjhgg</p>
         </div>
     </div>
-    
+    <div class="titulos">
+        <button class="beautiful-button">
+            BADMINTON
+        </button>
+    </div>
+    <div class="fondo">
+        <div class="deportes">
+            <div class="apostar">
+                <div class="foto">
+                    <img src="./f1/pilotos/alfa romeo.jpg" width="640" height="360">
+                </div>
+                <div class="video">
+                    <video width="640" height="360" controls>
+                        <source src="Top 10 Most Dramatic Moments Of The 2022 F1 Season!.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+        </div>
+        <div class="info">
+            <p>kjhgkjhgjhgg</p>
+        </div>
+    </div>
+    <div class="titulos">
+        <button class="beautiful-button">
+            BASEBALL
+        </button>
+    </div>
+    <div class="fondo">
+        <div class="deportes">
+            <div class="apostar">
+                <div class="foto">
+                    <img src="./f1/pilotos/alfa romeo.jpg" width="640" height="360">
+                </div>
+                <div class="video">
+                    <video width="640" height="360" controls>
+                        <source src="Top 10 Most Dramatic Moments Of The 2022 F1 Season!.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+        </div>
+        <div class="info">
+            <p>kjhgkjhgjhgg</p>
+        </div>
+    </div>
+    <div class="titulos">
+        <button class="beautiful-button">
+            TENIS
+        </button>
+    </div>
+    <div class="fondo">
+        <div class="deportes">
+            <div class="apostar">
+                <div class="foto">
+                    <img src="./f1/pilotos/alfa romeo.jpg" width="640" height="360">
+                </div>
+                <div class="video">
+                    <video width="640" height="360" controls>
+                        <source src="Top 10 Most Dramatic Moments Of The 2022 F1 Season!.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+        </div>
+        <div class="info">
+            <p>kjhgkjhgjhgg</p>
+        </div>
+    </div>
+    <div class="titulos">
+        <button class="beautiful-button">
+            VOLEY
+        </button>
+    </div>
+    <div class="fondo">
+        <div class="deportes">
+            <div class="apostar">
+                <div class="foto">
+                    <img src="./f1/pilotos/alfa romeo.jpg" width="640" height="360">
+                </div>
+                <div class="video">
+                    <video width="640" height="360" controls>
+                        <source src="Top 10 Most Dramatic Moments Of The 2022 F1 Season!.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+        </div>
+        <div class="info">
+            <p>kjhgkjhgjhgg</p>
+        </div>
+    </div>
+    <div class="titulos">
+        <button class="beautiful-button">
+            COUNTER-STRIKE
+        </button>
+    </div>
+    <div class="fondo">
+        <div class="deportes">
+            <div class="apostar">
+                <div class="foto">
+                    <img src="./f1/pilotos/alfa romeo.jpg" width="640" height="360">
+                </div>
+                <div class="video">
+                    <video width="640" height="360" controls>
+                        <source src="Top 10 Most Dramatic Moments Of The 2022 F1 Season!.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+        </div>
+        <div class="info">
+            <p>kjhgkjhgjhgg</p>
+        </div>
+    </div>
+    <div class="titulos">
+        <button class="beautiful-button">
+            FORMULA 1
+        </button>
+    </div>
+    <div class="fondo">
+        <div class="deportes">
+            <div class="apostar">
+                <div class="foto">
+                    <img src="./f1/pilotos/alfa romeo.jpg" width="640" height="360">
+                </div>
+                <div class="video">
+                    <video width="640" height="360" controls>
+                        <source src="Top 10 Most Dramatic Moments Of The 2022 F1 Season!.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+        </div>
+        <div class="info">
+            <p>kjhgkjhgjhgg</p>
+        </div>
+    </div>
+    <div class="titulos">
+        <button class="beautiful-button">
+            VALORANT
+        </button>
+    </div>
+    <div class="fondo">
+        <div class="deportes">
+            <div class="apostar">
+                <div class="foto">
+                    <img src="./f1/pilotos/alfa romeo.jpg" width="640" height="360">
+                </div>
+                <div class="video">
+                    <video width="640" height="360" controls>
+                        <source src="Top 10 Most Dramatic Moments Of The 2022 F1 Season!.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+        </div>
+        <div class="info">
+            <p>kjhgkjhgjhgg</p>
+        </div>
+    </div>
+
+    <!--seccion de los textos cambiantes-->
     <div class="texto-cambiante">
         <div class="cardcambiante">
             <a class="card1" href="#">
@@ -99,7 +264,7 @@
     <script>
         // Array de textos que quieres mostrar
         const textos = ["EL FUTBOL SE JUEGA CON UNA PEROTA", "LA FORMULA 1 ES LA MAXIMA CATEGORIA DEL AUTOMIVILISMO",
-        "A LUCAS LE GUSTA EL PENE ", "EL PAN ESTA SOBREVALORADO"];
+        "AAAAAAAAAAHHHH", "EL PAN ESTA SOBREVALORADO"];
         let currentIndex = 0;
 
         // Función para cambiar el texto cada 2 minutos (120,000 milisegundos)
