--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -732,6 +732,10 @@
             </div>
         </div>
     </section>
+    <!-- <section class="imagen_light">
+        <img src="./imagenes/iconos/cruzar.png" alt="" class="close">
+        <img src="" alt="" class="agregar_imagen">
+    </section> -->
     
 
     <footer>
