--- a/pages/deportes/futbol/home_futbol.html
+++ b/pages/deportes/futbol/home_futbol.html
@@ -44,8 +44,6 @@
   </div>
 
 
-
-
   <div class="principal-1">
     <a href="./eliminatorias_sudamericanas/eliminatorias_sudamericanas.html"><img src="./images/escudos_ligas/CONMEBOL/conmebol.png" alt="eliminatorias_sudamericanas"></a>
     <a href="./copa_libertadores/copa_libertadores.html"><img src="./images/escudos_ligas/libertadores.png" alt="copa-libertadores"></a>
@@ -302,6 +300,13 @@
             <img src="images/escudos_ligas/PREMIERLEAGUE/fotos/premier2.png" alt="Resultado 1">
             <img src="images/escudos_ligas/PREMIERLEAGUE/fotos/premier3.png" alt="Resultado 2">
             <img src="images/escudos_ligas/PREMIERLEAGUE/fotos/premier4.png" alt="Resultado 3">
+            <img src="images/escudos_ligas/PREMIERLEAGUE/fotos/premier5.png" alt="Resultado 4">
+            <img src="images/escudos_ligas/PREMIERLEAGUE/fotos/premier6.png" alt="Resultado 5">
+            <img src="images/escudos_ligas/PREMIERLEAGUE/fotos/premier7.jpg" alt="Resultado 6">
+            <img src="images/escudos_ligas/PREMIERLEAGUE/fotos/premier8.jpg" alt="Resultado 7">
+            <img src="images/escudos_ligas/PREMIERLEAGUE/fotos/premier9.jpg" alt="Resultado 8">
+            <img src="images/escudos_ligas/PREMIERLEAGUE/fotos/premier10.jpg" alt="Resultado 9">
+            <img src="images/escudos_ligas/PREMIERLEAGUE/fotos/premier11.jpg" alt="Resultado 10">
         </div>
         <button id="nextBtn" class="carousel-button" onclick="changeSlide(1)">></button>
     </div>
@@ -525,19 +530,266 @@
 <div class="carousel-container">
     <button id="prevBtn" class="carousel-button" onclick="changeSlide(-1)"><</button>
     <div class="carousel-slide">
+        <img src="images/escudos_ligas/BUNDESLIGA/fotos/bundesliga1.jpg" alt="Resultado 1">
+        <img src="images/escudos_ligas/BUNDESLIGA/fotos/bundesliga2.jpg" alt="Resultado 2">
+        <img src="images/escudos_ligas/BUNDESLIGA/fotos/bundesliga3.jpg" alt="Resultado 3">
+        <img src="images/escudos_ligas/BUNDESLIGA/fotos/bundesliga4.jpg" alt="Resultado 4">
+        <img src="images/escudos_ligas/BUNDESLIGA/fotos/bundesliga5.jpg" alt="Resultado 5">
+        <img src="images/escudos_ligas/BUNDESLIGA/fotos/bundesliga6.jpg" alt="Resultado 6">
+        <img src="images/escudos_ligas/BUNDESLIGA/fotos/bundesliga7.jpg" alt="Resultado 7">
+        <img src="images/escudos_ligas/BUNDESLIGA/fotos/bundesliga8.jpg" alt="Resultado 8">
+        <img src="images/escudos_ligas/BUNDESLIGA/fotos/bundesliga9.jpg" alt="Resultado 9">
+        <img src="images/escudos_ligas/BUNDESLIGA/fotos/bundesliga10.jpg" alt="Resultado 10">
+        <img src="images/escudos_ligas/BUNDESLIGA/fotos/bundesliga11.jpg" alt="Resultado 11">
+    </div>
+    <button id="nextBtn" class="carousel-button" onclick="changeSlide(1)">></button>
+</div>
+
+
+<section id="laLiga">
+    <div class="noticias">
+        <div class="noticia grande">
+            <h2>COMENZO LA TEMPORADA 2023 -2024</h2>
+            <img src="./images/escudos_ligas/LALIGA/espana2.png" alt="Noticia 1">
+            <p>La Primera División de España o LaLiga, cuyo nombre comercial es LaLiga EA Sports debido al patrocinio de EA Sports,​​ y cuyo nombre oficial es Campeonato Nacional de Liga de Primera División,
+                 es la máxima categoría del sistema de ligas de fútbol de España y la principal competición a nivel de clubes del país. El vigente campeón es el Fútbol Club Barcelona. La organiza desde 1984 
+                 la Liga Nacional de Fútbol Profesional tras suceder a la Real Federación Española de Fútbol (RFEF). Se disputa desde la temporada 1928-29 y tan solo se vio interrumpida en dos ocasiones: entre 1936 y 1938, 
+                 debido a la guerra civil española, y en 2020,1​ debido a pandemia de COVID-19 iniciada a finales del 2019 y que adquirió notoriedad a principios de el año siguiente.
+                 La Primera División es, junto a la Segunda División, una de las dos únicas categorías con estatus profesional en España, ambas bajo el amparo de la Liga Nacional de Fútbol Profesional, mientras que el resto 
+                 de divisiones dependen de la RFEF y de sus correspondientes federaciones autonómicas.</p>
+        </div>
+
+    </div>
+        <div class="tabla-posiciones">
+            <h2>TABLA DE POSICIONES DE LA LIGA</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Equipo</th>
+                        <th>PJ</th>
+                        <th>PG</th>
+                        <th>PE</th>
+                        <th>PP</th>
+                        <th>GF</th>
+                        <th>GE</th>
+                        <th>Pts</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><img src="./images/escudos_ligas/LALIGA/alaves.png" alt="Escudo Equipo 1"> Alaves</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                    </tr>
+                    <tr>
+                        <td><img src="./images/escudos_ligas/LALIGA/almeria.png" alt="Escudo Equipo 1"> Almeria</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                    </tr>
+                    <tr>
+                        <td><img src="./images/escudos_ligas/LALIGA/athletic.png" alt="Escudo Equipo 1"> Athletic Club</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                    </tr>
+                    <tr>
+                        <td><img src="./images/escudos_ligas/LALIGA/atlmadrid.png" alt="Escudo Equipo 1"> Atletico de Madrid</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                    </tr>
+                    <tr>
+                        <td><img src="./images/escudos_ligas/LALIGA/barcelona.png" alt="Escudo Equipo 1"> Barcelona</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                    </tr>
+                    <tr>
+                        <td><img src="./images/escudos_ligas/LALIGA/betis.png" alt="Escudo Equipo 1"> Betis</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                    </tr>
+                    <tr>
+                        <td><img src="./images/escudos_ligas/LALIGA/cadiz.png" alt="Escudo Equipo 1"> Cadiz</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                    </tr>
+                    <tr>
+                        <td><img src="./images/escudos_ligas/LALIGA/celta.png" alt="Escudo Equipo 1"> Celta de Vigo</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                    </tr>
+                    <tr>
+                        <td><img src="./images/escudos_ligas/LALIGA/getafe.png" alt="Escudo Equipo 1"> Getafe</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                    </tr>
+                    <tr>
+                        <td><img src="./images/escudos_ligas/LALIGA/girona.png" alt="Escudo Equipo 1"> Girona FC</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                    </tr>
+                    <tr>
+                        <td><img src="./images/escudos_ligas/LALIGA/granada.png" alt="Escudo Equipo 1"> Granada</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                    </tr>
+                    <tr>
+                        <td><img src="./images/escudos_ligas/LALIGA/mallorca.png" alt="Escudo Equipo 1"> Mallorca R.C.D</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                    </tr>
+                    <tr>
+                        <td><img src="./images/escudos_ligas/LALIGA/osasuna.png" alt="Escudo Equipo 1"> Osasuna</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                    </tr>
+                    <tr>
+                        <td><img src="./images/escudos_ligas/LALIGA/rayovallecano.png" alt="Escudo Equipo 1"> Rayo Vallecano</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                    </tr>
+                    <tr>
+                        <td><img src="./images/escudos_ligas/LALIGA/realmadrid.png" alt="Escudo Equipo 1"> Real Madrid</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                    </tr>
+                    <tr>
+                        <td><img src="./images/escudos_ligas/LALIGA/realsociedad.png" alt="Escudo Equipo 1"> Real Sociedad</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                    </tr>
+                    <tr>
+                        <td><img src="./images/escudos_ligas/LALIGA/sevilla.png" alt="Escudo Equipo 1"> Sevilla</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                    </tr>
+                    <tr>
+                        <td><img src="./images/escudos_ligas/LALIGA/udlaspalmas.png" alt="Escudo Equipo 1"> U.D Las Palmas</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                    </tr>
+                    <tr>
+                        <td><img src="./images/escudos_ligas/LALIGA/valencia.png" alt="Escudo Equipo 1"> Valencia C.F</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                    </tr>
+                    <tr>
+                        <td><img src="./images/escudos_ligas/LALIGA/villarreal.png" alt="Escudo Equipo 1"> Villarreal</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>15</td>
+                        <td>15</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+</section>
+<h2 class="texto-noticias"> NOTICIAS AL INSTANTE</h2>
+<div class="carousel-container">
+    <button id="prevBtn" class="carousel-button" onclick="changeSlide(-1)"><</button>
+    <div class="carousel-slide">
         <img src="images/escudos_ligas/PREMIERLEAGUE/fotos/premier2.png" alt="Resultado 1">
         <img src="images/escudos_ligas/PREMIERLEAGUE/fotos/premier3.png" alt="Resultado 2">
         <img src="images/escudos_ligas/PREMIERLEAGUE/fotos/premier4.png" alt="Resultado 3">
     </div>
     <button id="nextBtn" class="carousel-button" onclick="changeSlide(1)">></button>
 </div>
-
-
-<section id="ligaA">
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas et facilis tenetur praesentium eius maxime sed, blanditiis incidunt ipsa at alias. Alias deserunt minima nobis, molestias sequi culpa odit aliquid!
-    </p>
-</section>
 
 <section id="serieA">
     <p>
