--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -769,10 +769,10 @@
             </div>
         </div>
     </section>
-    <!-- <section class="imagen_light">
-        <img src="./imagenes/iconos/cruzar.png" alt="" class="close">
-        <img src="" alt="" class="agregar_imagen">
-    </section> -->
+    <section class="imagen_light">
+        <img src="./imagenes/iconos/eliminar.png" alt="" class="close">
+        <img src="./imagenes/Banner-web-1200.png" alt="" class="agregar_imagen">
+    </section>
     
 
     <footer>
