--- a/login/login.html
+++ b/login/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="login.css">
     <title>login</title><style>
         body 
         {
@@ -13,6 +14,22 @@
     </style>
 </head>
 <body>
-    
+    <div class="container">
+        <form id="login-form">
+            <h1>Iniciar Sesión</h1>
+            <div class="input-container">
+                <label for="username">Nombre de Usuario o Correo Electrónico:</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            <div class="input-container">
+                <label for="password">Contraseña:</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <button type="submit">Ingresar</button>
+            <div class="password-reset">
+                <a href="reset-password.html">¿Olvidaste tu contraseña?</a>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
