--- a/pages/home_pages.html
+++ b/pages/home_pages.html
@@ -121,7 +121,7 @@
                     VOLEY
                 </p>
                 <p class="para">
-                    El voleibol, vóleibol, volibol, vólibol, balonvolea o simplemente vóley ​ es un deporte que se juega con una pelota y en el que dos equipos, 
+                    El voleibol o simplemente vóley es un deporte que se juega con una pelota y en el que dos equipos, 
                     integrados por seis jugadores cada uno, 
                     se enfrentan sobre una área de juego separada por una red central. 
                 </p>
