--- a/pages/deportes/Baseball/home_baseball.html
+++ b/pages/deportes/Baseball/home_baseball.html
@@ -55,7 +55,7 @@
                         <div class="baltimore">
                             <div class="content">
                              
-                                <button class="btn">Read more</button>
+                                <button class="btn" onclick="window.location.href='/referencias/baltimore_orioles.html'">Read more</button>
                             </div>
                         </div>
                     </div>
