--- a/pages/deportes/BalonMano/Estadisticas/estadisticas_champions.html
+++ b/pages/deportes/BalonMano/Estadisticas/estadisticas_champions.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Estadisticas</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bebas Neues">
-  <link rel="stylesheet" href="botones_estadisticas.css">
+  <link rel="stylesheet" href="botones_champions.css">
   <style>
    </style>
 </head>
@@ -32,10 +32,6 @@
         </button>
       </button>
     </div>
-    <div class="principal-1">
-      <a href="estadisticas_mundial.html" target="_blank"><img src="./Imagenes/mundial.jpg" alt="mundial"></a>
-      <a href="estadisticas_champions.html" target="_blank"><img src="./Imagenes/champions.png" alt="Champions"></a>
-  </div>
     <div class="container2">
       <h2>Machineseeker EHF Champions League 2023/2024</h2>
       <h1 id="equipo1">Maximos Goleadores</h1>
