--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -778,6 +778,16 @@
         <img src="./imagenes/iconos/eliminar.png" alt="" class="close">
         <img src="./imagenes/Banner-web-1200.png" alt="" class="agregar_imagen">
     </section>
+
+    <div class="gotop_container">
+
+        <div class="gotop_button">
+
+            <img class="button" src="./imagenes/iconos/flecha-arriba.png" alt="">
+
+        </div>
+
+    </div>
     
 
     <footer>
