--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -29,7 +29,7 @@
                 </button>
             </div>
             <div class="logo_titulo">
-                <img src="./imagenes/logo depologs/logo_titulo1.png" alt="Logo del titulo">
+                <img src="./imagenes/logo depologs/logo_depologs_l.jpeg" alt="Logo del titulo">
             </div>
 
         </nav>
